--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="bg-black">
     <header>
-      <nav>
-        <div><img src="./icon.png" alt="" />Filmstaden FS</div>
-        <ul>
+      <nav class="bg-gray text-white flex">
+        <div><img class="h-6" src="./icon.png" alt="" />Filmstaden FS</div>
+        <ul class="flex">
           <li><a href="#">Startsida</a></li>
           <li><a href="#">Om filmen</a></li>
           <li><a href="#">Biljetter</a></li>
@@ -18,7 +19,7 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="bg-gray text-white">
         <h1>Header</h1>
         <p>
           HEADER portrays the grueling psychological journey taken by ATF Agent
@@ -41,7 +42,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="text-white">
       <p>Filmbolaget FS</p>
       <p>Webmaster: Billy Andersson</p>
     </footer>
